1.3.0 (beta)

 - Allow use of any string field for mailer recipient choice. A bit
   scary until we get captchas built in. (Steve McMahon)

 - Mailer now has an option to select among available fields those
   which should be included in the e-mail. Interface is identical to 
   thanks page. (Steve McMahon)

 - Added support for embedding PFG forms into other templates.  See
   README_EMBEDDING.txt for details. (David Glick)

 - Clean out 2.1 compatibility code. Ahhhh! (Steve McMahon)

 - Pulling out removeSkinLayer for arg PloneFormGenPlone3, since
   this appears to have not existed and certainly is unnecessary
   currently (Andrew Burkhalter)
 
 - Removed unneeded and unused legacy typesonly profile directory 
   (Andrew Burkhalter)

 - Installation process is entirely based upon GenericSetup extension
   profiles to the level that is pragmatic for support of Plone 2.5.x
   up to version Plone 3.x. In brief, this means that we have an install
   method so that we appear installable with the portal_quickinstaller 
   tool in Plone 2.5.x and that we run relevant profiles in portal_setup
   upon install (Jesse Snyder, Andrew Burkhalter)

1.2.5

 - Integrate Portugese translation from Nuno Cruz.

 - Form submission should not be disabled when the form is locked for
   editing.

 - Fixed bug where 3rd-party additions to the list of types allowed
   within a form folder were purged on PFG reinstall.
   This closes http://plone.org/products/ploneformgen/issues/210
   (David Glick)

 - Fixed bug where install failed if portal_factory still references
   any types that no longer exist in portal_types.
   (David Glick)

1.2.4

 - Added Rating-Scale Field based on Titus Anderson's LikertField.
   Thanks to Titus and the University of Louisville.

 - Add delete capabilities to Andreas' record editor. Added escaping
   for multi-line fields. Guarded editing with ModifyPortalContent
   rather than the download permission.
