@@ -1,5 +1,8 @@
 1.3.0 (beta)
 
+ - Link spam prevention is now an option for string and text fields.
+   (Jon Baldivieso)
+
  - Allow use of any string field for mailer recipient choice. A bit
    scary until we get captchas built in. (Steve McMahon)
 
